# hello-cube

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: allocator.hpp  buffer.hpp  camera.hpp  core.hpp  debug_utils.hpp  depth_buffer.hpp  engine.hpp  hello_cube.hpp  mesh.hpp  pipeline_builder.hpp  scene.hpp  shader.hpp  timer.hpp  types.hpp  uniform_buffer.hpp  upload_context.hpp  vk_context.hpp
engine/include/hvk/: allocator.hpp  buffer.hpp  camera.hpp  core.hpp  debug_utils.hpp  depth_buffer.hpp  descriptor_utils.hpp  engine.hpp  hello_vulkan.hpp  material.hpp  mesh.hpp  model.hpp  pipeline_builder.hpp  resource_manager.hpp  scene.hpp  shader.hpp  texture.hpp  ui.hpp  upload_context.hpp  vk_context.hpp
engine/src/: allocator.cpp  buffer.cpp  camera.cpp  debug_utils.cpp  depth_buffer.cpp  descriptor_utils.cpp  engine.cpp  logger.cpp  logger.hpp  material.cpp  mesh.cpp  model.cpp  pipeline_builder.cpp  resource_manager.cpp  scene.cpp  shader.cpp  texture.cpp  timer.cpp  ui.cpp  uniform_buffer.cpp  upload_context.cpp  vk_context.cpp
shaders/: hello_triangle.vert  mesh.frag  mesh.vert  textured_lit.frag  textured_lit.vert  ui.frag  ui.vert
